--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "qqtest",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "ioredis": "^3.1.4",
@@ -13,5 +12,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
