--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -9,7 +9,10 @@
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceRoot}/index.js",
-            "cwd": "${workspaceRoot}"
+            "cwd": "${workspaceRoot}",
+            "args": [
+                "30000"
+            ]
             // "outFiles": [
             //     "${workspaceRoot}/out/**/*.js"
             // ]
